ctrlcode/gimbalboard/gimbctrl/build/gimbctrl/unify_builder.log
[2022-07-23 16:44:23]	compilation failed at : "c:\MXI4\MXI4\ctrlcode\gimbalboard\gimbctrl\Src\freertos.c", exit code: 1
   at unify_builder.Program.compileByMulThread(Int32 thrNum, CmdInfo[] cmds, List`1 errLogs)
   at unify_builder.Program.Main(String[] args_)
---
./Src/freertos.c:63:6: error: conflicting types for 'INS_task'
 void INS_task(void *argument);
      ^~~~~~~~
In file included from Inc/main.h:52,
                 from ./Src/freertos.c:23:
Inc/INS_task.h:85:13: note: previous declaration of 'INS_task' was here
 extern void INS_task(void const *pvParameters);
             ^~~~~~~~
./Src/freertos.c:114:13: error: conflicting types for 'INS_task'
 __weak void INS_task(void *argument)
             ^~~~~~~~
In file included from Inc/main.h:52,
                 from ./Src/freertos.c:23:
Inc/INS_task.h:85:13: note: previous declaration of 'INS_task' was here
 extern void INS_task(void const *pvParameters);
             ^~~~~~~~

[2022-07-23 16:48:59]	compilation failed at : "c:\MXI4\MXI4\ctrlcode\gimbalboard\gimbctrl\src\tasks\INS_task.c", exit code: 1
   at unify_builder.Program.compileByMulThread(Int32 thrNum, CmdInfo[] cmds, List`1 errLogs)
   at unify_builder.Program.Main(String[] args_)
---
./src/tasks/INS_task.c: In function 'INS_task':
./src/tasks/INS_task.c:103:1: error: number of arguments doesn't match prototype
 {
 ^
In file included from Inc/main.h:52,
                 from ./src/tasks/INS_task.c:24:
Inc/INS_task.h:85:13: error: prototype declaration
 extern void INS_task(void const *pvParameters);
             ^~~~~~~~

[2022-07-23 16:49:55]	[done]
	build successfully !

